[package]
name = "ukiyo"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "ukiyo"

[lib]
name="ukiyo"
path="src/lib/mod.rs"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[[test]]
name = "tests"
path = "tests/langtest.rs"
harness = false

[dev-dependencies]
lang_tester = "0.7.1"
